--- a/index.html
+++ b/index.html
@@ -217,6 +217,9 @@ quebra facilmenteâ€Eclesiastes 4:9.</p>
        html.addEventListener('mousemove', () => {
             musica.play();
         })
+	    
+	     var elemento = document.querySelector('html');
+        elemento.addEventListener('scroll', html);
     </script> 
 
    
