--- a/index.html
+++ b/index.html
@@ -218,8 +218,12 @@ quebra facilmenteâ€Eclesiastes 4:9.</p>
             musica.play();
         })
 	    
-	     var elemento = document.querySelector('html');
-        elemento.addEventListener('scroll', html);
+	    function minhaFuncao(e){
+    play();
+    
+}
+var elemento = document.querySelector('html');
+elemento.addEventListener('scroll', minhaFuncao);
     </script> 
 
    
