--- a/index.html
+++ b/index.html
@@ -218,12 +218,11 @@ quebra facilmenteâ€Eclesiastes 4:9.</p>
             musica.play();
         })
 	    
-	    function minhaFuncao(e){
-    play();
-    
 }
-var elemento = document.querySelector('html');
-elemento.addEventListener('scroll', minhaFuncao);
+
+html.addEventListener('mousemove', () => {
+            musica.play();
+        })
     </script> 
 
    
