--- a/index.html
+++ b/index.html
@@ -176,14 +176,10 @@ animation: snow 10s linear infinite;
         let musica = document.querySelector("#musica");
         
 
-       html.addEventListener('mousemove', () => {
+       html.addEventListener('click', () => {
             musica.play();
         })
 	    
-
-html.addEventListener('mousemove', () => {
-            musica.play();
-        })
 	   }
 	   function detectar_mobile() {
   var check = elementmp3(); //wrapper no check
