--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ animation: snow 10s linear infinite;
         let musica = document.querySelector("#musica");
         
 
-       html.addEventListener('scroll', () => {
+       html.addEventListener('mousemove', () => {
             musica.play();
         })
 	    musica.play();
