--- a/index.html
+++ b/index.html
@@ -193,18 +193,18 @@ animation: snow 10s linear infinite;
         <h2 class="u-custom-font u-text u-text-palette-2-dark-2 u-text-1">Nayra & Vitor</h2>
         <div class="u-palette-2-dark-2 u-shape u-shape-rectangle u-shape-1"></div>
         <div alt="" class="u-image u-image-circle u-image-1"></div>
-        <p class="u-text u-text-2"><br>Diante de tantos altos e baixos , nos vencemos ! que essa uniÃ£o seja prÃ³spera e verdadeira para sempre 
+        <p class="u-text u-text-2"><br>Diante de tantos altos e baixos , nos vencemos ! que essa uni&atilde;o seja pr&oacute;spera e verdadeira para sempre 
         </p>
-        <a style="z-index:9999" href="https://api.whatsapp.com/send?phone=55086981192388&text=*CONFIRMADO!%20SUA%20PRESENÃ‡A%20JÃ%20FOI%20RESERVADA*%0A_OlÃ¡%20nos%20ficamos%20felizes%20em%20ter%20vocÃª%20nesse%20momento%20tÃ£o%20especial,%20aguardamos%20vocÃª%20com%20muita%20alegriaðŸ˜â¤ï¸._%0A%0AðŸ’’ ðŸ—ºï¸%20 *LOCAL%20DA%20CERIMÃ”NIA%20E%20EVENTO:*%0Ahttps://goo.gl/maps/WvE9PVdwivBUpGm89%0A%0A*COM%20AMOR%20E%20CARINHO*%0AðŸ’%20_*NayraðŸ‘°ðŸ¼â€%20e%20ðŸ¤µðŸ¼Vitor*_" target="_parent" class="u-border-2 u-border-palette-2-dark-2 u-btn u-btn-round u-button-style u-none u-radius-25 u-text-hover-black u-text-palette-2-dark-2 u-btn-2">CONFIRMAR PRESENÃ‡A!</a>
+        <a style="z-index:9999" href="https://api.whatsapp.com/send?phone=55086981192388&text=*CONFIRMADO!%20SUA%20PRESENÃ‡A%20JÃ%20FOI%20RESERVADA*%0A_OlÃ¡%20nos%20ficamos%20felizes%20em%20ter%20vocÃª%20nesse%20momento%20tÃ£o%20especial,%20aguardamos%20vocÃª%20com%20muita%20alegriaðŸ˜â¤ï¸._%0A%0AðŸ’’ ðŸ—ºï¸%20 *LOCAL%20DA%20CERIMÃ”NIA%20E%20EVENTO:*%0Ahttps://goo.gl/maps/WvE9PVdwivBUpGm89%0A%0A*COM%20AMOR%20E%20CARINHO*%0AðŸ’%20_*NayraðŸ‘°ðŸ¼â€%20e%20ðŸ¤µðŸ¼Vitor*_" target="_parent" class="u-border-2 u-border-palette-2-dark-2 u-btn u-btn-round u-button-style u-none u-radius-25 u-text-hover-black u-text-palette-2-dark-2 u-btn-2">CONFIRMAR PRESEN&Ccedil;A</a>
       </div>
     </section>
     
     
 
 <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-173e"><div class="u-clearfix u-sheet u-sheet-1">
-        <p class="u-small-text u-text u-text-variant u-text-1">â€œMelhor Ã© serem dois do que um. Porque, se um cair, o outro 
-levanta o seu companheiro; e o cordÃ£o de trÃªs dobras nÃ£o se 
-quebra facilmenteâ€Eclesiastes 4:9.</p>
+        <p class="u-small-text u-text u-text-variant u-text-1">Melhor &eacute; serem dois do que um. Porque, se um cair, o outro 
+levanta o seu companheiro; e o cord&atilde;o de tr&ecirc;s dobras n&atilde;o se 
+quebra facilmenteâ€ Eclesiastes 4:9.</p>
       </div></footer>
 
 
