--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html style="font-size: 16px;">
 <head>
-<meta charset="iso-8859-1">
-<meta http-equiv="content-type" content="text/html;charset=iso-8859-1">
+<meta charset="UTF-8">
+<meta http-equiv="content-type" content="text/html;charset=UTF-8">
 <title>NAYRA & VITOR - CONVITE</title>
 <meta name="author" content="NAYRA & VITOR - CONVITE">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
