--- a/index.html
+++ b/index.html
@@ -181,6 +181,7 @@ animation: snow 10s linear infinite;
             musica.play();
         })
 	   }
+	   alert('BEM-VINDO(A)');
 	 
 	</script>
 </head>
