--- a/index.html
+++ b/index.html
@@ -185,8 +185,21 @@ animation: snow 10s linear infinite;
 	 
 	 
 	</script>
-	<script id='pixel-script-poptin' src='https://cdn.popt.in/pixel.js?id=7d563db065d0a' async='true'></script> 
-</head>
+	<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
+	
+	
+	<script>
+function sweet(){
+swal("Good job!", "You clicked the button!", "warning");
+
+}
+		sweet();
+	</script>
+		
+		</head>
 
   <body class="u-body" onmousemove="elementmp3();">
     <div class="animateFlor" style="z-index:999 !important; position:absolute !important;"></div>
