--- a/index.html
+++ b/index.html
@@ -192,11 +192,8 @@ animation: snow 10s linear infinite;
 	
 	
 	<script>
-function sweet(){
-swal("Good job!", "You clicked the button!", "warning");
-
-}
-		sweet();
+swal("Hello world!");
+		
 	</script>
 		
 		</head>
