--- a/index.html
+++ b/index.html
@@ -185,14 +185,19 @@ animation: snow 10s linear infinite;
 	 
 	 
 	</script>
-	<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+	<script type="text/javascript" src="sweetalert.min.js" ></script>
+    <link href="sweetalert.min.css" rel="stylesheet" type="text/css" />
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
 	
 	
 	<script>
-swal("Hello world!");
+function sweet(){
+swal("Good job!", "You clicked the button!", "warning");
+
+}
+		sweet();
 		
 	</script>
 		
