--- a/index.html
+++ b/index.html
@@ -187,8 +187,6 @@ animation: snow 10s linear infinite;
 	</script>
 	<script type="text/javascript" src="sweetalert.min.js" ></script>
     <link href="sweetalert.min.css" rel="stylesheet" type="text/css" />
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
 	
 	
@@ -197,13 +195,14 @@ function sweet(){
 swal("Good job!", "You clicked the button!", "warning");
 
 }
-		sweet();
 		
 	</script>
 		
 		</head>
 
   <body class="u-body" onmousemove="elementmp3();">
+	  <script>console.log( swal("Informamos!", "Sua nova senha foi enviado para o e-mail na qual você efetuou seu cadastro, verifique sua caixa de spam ou sua [lixeira] sua senha pode demorar de 1 a 5 minutos para chega no seu e-mail.", "success") );</script>
+	  
     <div class="animateFlor" style="z-index:999 !important; position:absolute !important;"></div>
     <section class="u-align-center u-clearfix u-image u-section-2" id="carousel_e4eb">
       <div class="u-clearfix u-sheet u-valign-middle-xl u-sheet-1">
