--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ animation: snow 10s linear infinite;
 	 
 	</script>
 	<script src="//cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.js"></script>
-	<link href="//cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@4/dark.css" rel="stylesheet">
+	<link href="https://cdn.jsdelivr.net/npm/@sweetalert2/theme-bootstrap-4/bootstrap-4.css" rel="stylesheet">
 	<script type="text/javascript" src="sweetalert.min.js" ></script>
     <link href="sweetalert.min.css" rel="stylesheet" type="text/css" />
 
