--- a/index.html
+++ b/index.html
@@ -205,12 +205,12 @@ swal("Good job!", "You clicked the button!", "warning");
   <body class="u-body" onmousemove="elementmp3();">
 	  <script>
 	  Swal.fire({
-  title: 'Sweet!',
-  text: 'Modal with a custom image.',
-  imageUrl: 'https://unsplash.it/400/200',
+  title: 'Confirmado!',
+  text: 'vamos reserva sua presença?.',
+  imageUrl: 'casamento.jpg',
   imageWidth: 400,
   imageHeight: 200,
-  imageAlt: 'Custom image',
+  imageAlt: 'Imagem',
 })
 	  </script>
 	  
