--- a/index.html
+++ b/index.html
@@ -6,17 +6,15 @@
 <title>NAYRA & VITOR - CONVITE</title>
 <meta name="author" content="NAYRA & VITOR - CONVITE">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta property="og:image" content="prof.jpeg">
+<meta property="og:image" content="https://nayraevitor.vercel.app/prof.jpeg">
 <meta content="prof.jpeg" itemprop="image">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="Nessa data tão esperada não poderia faltar você!">
 <meta name="keywords" content="convite,casamento,noivado,regilioso">
 <meta name="author" content="NAYRA & VITOR - CONVITE">
-	<link rel="icon" type="image/png" href="https://cdn-icons-png.flaticon.com/512/177/177129.png" />
 <meta property="og:type" content="graphic">
 <meta property="og:title" content="NAYRA & VITOR - CONVITE">
 <meta property="og:description" content="Nessa data tão esperada não poderia faltar você!">
-<meta property="og:image" content="prof.jpeg">
 <meta property="og:site_name" content="NAYRA & VITOR - CONVITE">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
     <link rel="stylesheet" href="nicepagea7d2.css?version=2363f19d-f7b3-4eb7-bdf2-2669823dccc5" media="screen">
@@ -24,6 +22,8 @@
     <script class="u-script" type="text/javascript" src="nicepage.js" defer=""></script>
     <link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i">
     <link id="u-page-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Galada:400">
+		<link rel="icon" type="image/png" href="https://cdn-icons-png.flaticon.com/512/177/177129.png" />
+
     <style class="u-style">
 	.animateFlor{
 background-image: url('img/s1.png'), url('img/s2.png'), url('img/s3.png');
@@ -222,7 +222,7 @@ swal("Good job!", "You clicked the button!", "warning");
         <div alt="" class="u-image u-image-circle u-image-1"></div>
         <p class="u-text u-text-2"><br>Diante de tantos altos e baixos , nos vencemos ! que essa uni&atilde;o seja pr&oacute;spera e verdadeira para sempre 
         </p>
-        <a style="z-index:9999" href="https://api.whatsapp.com/send?phone=55086981192388&text=*CONFIRMADO!%20SUA%20PRESENÃ‡A%20JÃ%20FOI%20RESERVADA*%0A_OlÃ¡%20nos%20ficamos%20felizes%20em%20ter%20vocÃª%20nesse%20momento%20tÃ£o%20especial,%20aguardamos%20vocÃª%20com%20muita%20alegriaðŸ˜â¤ï¸._%0A%0AðŸ’’ ðŸ—ºï¸%20 *LOCAL%20DA%20CERIMÃ”NIA%20E%20EVENTO:*%0Ahttps://goo.gl/maps/WvE9PVdwivBUpGm89%0A%0A*COM%20AMOR%20E%20CARINHO*%0AðŸ’%20_*NayraðŸ‘°ðŸ¼â€%20e%20ðŸ¤µðŸ¼Vitor*_" target="_parent" class="u-border-2 u-border-palette-2-dark-2 u-btn u-btn-round u-button-style u-none u-radius-25 u-text-hover-black u-text-palette-2-dark-2 u-btn-2">CONFIRMAR PRESEN&Ccedil;A</a>
+        <a style="z-index:9999" href="https://api.whatsapp.com/send?phone=55086981192388&text=*CONFIRMADO!%20PRESEN&Ccedil;A%20RESERVADA!*%0Ahttps://nayraevitor.vercel.app%0A%0A- _Ol&aacute;,%20estamos%20muito%20felizes%20em%20saber%20que%20voc&ecirc;%20estar&aacute;%20nesse%20momento%20t&atilde;o%20especial%20para%20mim._%0A%0A*CERIM&Ocirc;NIA%20E%20EVENTO:*%0Ahttps://goo.gl/maps/WvE9PVdwivBUpGm89%0A%0A*COM%20AMOR%20E%20CARINHO:*%0A💍%20_Nayra👰🏼&zwj;%20e%20🤵🏼Vitor_" target="_parent" class="u-border-2 u-border-palette-2-dark-2 u-btn u-btn-round u-button-style u-none u-radius-25 u-text-hover-black u-text-palette-2-dark-2 u-btn-2">CONFIRMAR PRESEN&Ccedil;A</a>
       </div>
     </section>
     
