--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
 		<link rel="icon" type="image/png" href="https://cdn-icons-png.flaticon.com/512/177/177129.png" />
 
     <style class="u-style">
+	    .swal2-container{
+		    z-index: 99999 !important;
+	    }
 	.animateFlor{
 background-image: url('img/s1.png'), url('img/s2.png'), url('img/s3.png');
 height: 100%;
