--- a/index.html
+++ b/index.html
@@ -238,7 +238,18 @@ levanta o seu companheiro; e o cord&atilde;o de tr&ecirc;s dobras n&atilde;o se
 quebra facilmenteâ€ Eclesiastes 4:9.</p>
       </div></footer>
 
-
+<video controls>
+        <source src="HttpLiveStream.m3u8" type="vnd.apple.mpegURL">
+        <source src="ProgressiveDowload.mp4" type="video/mp4">
+        <source src="OggVorbis.ogv" type="video/ogg">
+        <!-- fallback -->
+        <object classid="clsid:02BF25D5-8C17-4B23-BC80-D3488ABDDC6B"
+                codebase="http://www.apple.com/qtactivex/qtplugin.cab"
+                height="320"
+                width="240">
+            <param name="src" value="ProgressiveDownload.mp4">
+        </object>
+    </video>
 
 
 
