--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@ levanta o seu companheiro; e o cord&atilde;o de tr&ecirc;s dobras n&atilde;o se
 quebra facilmenteâ€ Eclesiastes 4:9.</p>
       </div></footer>
 
-<video controls>
+<video controls style="z-index:99999 !important;">
         <source src="songs.m3u8" type="vnd.apple.mpegURL">
         <source src="songs.mp4" type="video/mp4">
         <source src="songs.ogv" type="video/ogg">
