--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@ quebra facilmenteâ€ Eclesiastes 4:9.</p>
       </div></footer>
 
 <video controls style="z-index:99999 !important; position:absolute;">
-        <source src="songs.m3u8" type="vnd.apple.mpegURL">
+        <source src="songs.mp4" type="video/mp4">
         <!-- fallback -->
         <object classid="clsid:02BF25D5-8C17-4B23-BC80-D3488ABDDC6B"
                 codebase="http://www.apple.com/qtactivex/qtplugin.cab"
