--- a/index.html
+++ b/index.html
@@ -269,6 +269,11 @@ quebra facilmenteâ€ Eclesiastes 4:9.</p>
 	 
 <video controls autoplay style="z-index:99999 !important; position:absolute;">
         <source src="songs.mp4" type="video/mp4">
+	 <source src="songs.m3u8" type="vnd.apple.mpegURL">
+	<object classid="clsid:02BF25D5-8C17-4B23-BC80-D3488ABDDC6B"
+                codebase="http://www.apple.com/qtactivex/qtplugin.cab">
+            <param name="src" value="songs.mp4">
+        </object>
 </video>
 
    
