--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@ swal("Good job!", "You clicked the button!", "warning");
         <div alt="" class="u-image u-image-circle u-image-1"></div>
         <p class="u-text u-text-2"><br>Diante de tantos altos e baixos , nos vencemos ! que essa uni&atilde;o seja pr&oacute;spera e verdadeira para sempre 
         </p>
-        <a style="z-index:9999" href="https://api.whatsapp.com/send?phone=5586981758447&text=*CONFIRMADO!%20PRESEN&Ccedil;A%20RESERVADA!*%0Ahttps://nayraevitor.vercel.app%0A%0A- _Ol&aacute;,%20estamos%20muito%20felizes%20em%20saber%20que%20voc&ecirc;%20estar&aacute;%20nesse%20momento%20t&atilde;o%20especial%20para%20mim._%0A%0A*CERIM&Ocirc;NIA%20E%20EVENTO:*%0Ahttps://goo.gl/maps/WvE9PVdwivBUpGm89%0A%0A*COM%20AMOR%20E%20CARINHO:*%0A💍%20_Nayra👰🏼&zwj;%20e%20🤵🏼Vitor_" target="_parent" class="u-border-2 u-border-palette-2-dark-2 u-btn u-btn-round u-button-style u-none u-radius-25 u-text-hover-black u-text-palette-2-dark-2 u-btn-2">CONFIRMAR PRESEN&Ccedil;A</a>
+        <a style="z-index:9999" href="https://api.whatsapp.com/send?phone=5586981758447&text=*CONFIRMADO!%20PRESEN&Ccedil;A%20RESERVADA!*%0Ahttps://nayraevitor.vercel.app%0A%0A- _Ol&aacute;,%20estamos%20muito%20felizes%20em%20saber%20que%20voc&ecirc;%20estar&aacute;%20nesse%20momento%20t&atilde;o%20especial%20para%20n&oacute;s._%0A%0A*CERIM&Ocirc;NIA%20E%20EVENTO:*%0Ahttps://goo.gl/maps/WvE9PVdwivBUpGm89%0A%0A*COM%20AMOR%20E%20CARINHO:*%0A💍%20_Nayra👰🏼&zwj;%20e%20🤵🏼Vitor_" target="_parent" class="u-border-2 u-border-palette-2-dark-2 u-btn u-btn-round u-button-style u-none u-radius-25 u-text-hover-black u-text-palette-2-dark-2 u-btn-2">CONFIRMAR PRESEN&Ccedil;A</a>
       </div>
     </section>
     
